Fix My Logo alignment

--- a/styles-conference/assets/stylesheets/styles.css
+++ b/styles-conference/assets/stylesheets/styles.css
@@ -35,6 +35,7 @@ header {
   display: flex;
   height: 48px;
   justify-content: space-between;
+  margin-left: 8%;
 }
 
 .menu {
@@ -57,7 +58,7 @@ header {
   display: flex;
   align-items: center;
   text-align: center;
-  width: 26.666666%;
+  
   margin: 4px;
   text-decoration: none;
 }
